--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,63 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+aiosqlite==0.20.0
+altgraph==0.17.4
+annotated-types==0.6.0
+anyio==4.3.0
 asyncio==3.4.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
-bs4==0.0.2
 certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+customtkinter==5.2.2
+darkdetect==0.8.0
+distro==1.9.0
+fastapi==0.110.1
+fpdf==1.7.2
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 idna==3.7
+multidict==6.0.5
+openai==1.16.1
+outcome==1.3.0.post0
+packaging==24.0
+pefile==2023.2.7
+pillow==10.2.0
+pycparser==2.22
+pydantic==2.7.0
+pydantic_core==2.18.1
+pyinstaller==6.5.0
+pyinstaller-hooks-contrib==2024.3
+pyperclip==1.8.2
+PySocks==1.7.1
+python-dotenv==1.0.1
+pytube==15.0.0
+pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+reportlab==4.1.0
 requests==2.31.0
+selenium==4.19.0
+setuptools==69.2.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
+SpeechRecognition==3.10.1
+starlette==0.37.2
+tqdm==4.66.2
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
 urllib3==2.2.1
-
+uvicorn==0.29.0
+watchfiles==0.21.0
+webdriver-manager==4.0.1
+websockets==12.0
+wsproto==1.2.0
+yarl==1.9.4
